// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "main.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
  Array [
    "main.js?var=84068698136b49426631",
    6127,
    Object {
      "fullhash": "84068698136b49426631",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6127,
    },
  ],
]
`;

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): errors 1`] = `Array []`;

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): warnings 1`] = `Array []`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
  Array [
    "main.js?var=84068698136b49426631",
    6127,
    Object {
      "fullhash": "84068698136b49426631",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6127,
    },
  ],
]
`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): errors 1`] = `Array []`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): warnings 1`] = `Array []`;
